--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -126,17 +126,27 @@ body {
         background-color: hsla(0, 0%, 0%, 0.8);
     }
 
-
-    a:not([class]) {
+    a {
         --outline-style: dashed;
-        text-decoration-thickness: max(0.08em, 1px);
-        text-underline-offset: 0.15em;
-        color: var(--link-clr, inherit);
+        text-transform: uppercase;
+        font-weight: 700;
+
+        &:not([class]) {
+            --outline-style: dashed;
+            text-decoration-thickness: max(0.08em, 1px);
+            text-underline-offset: 0.15em;
+            color: var(--link-clr, inherit);
+
+            &:enabled:where(:focus-visible, :hover) {
+                color: var(--system-color-paleOrange);
+                text-decoration: currentColor wavy underline;
+            }
+        }
     }
 
-    a:not([class]):where(:focus-visible, :hover) {
-        color: var(--system-color-paleOrange);
-        text-decoration: currentColor wavy underline;
+    a:where([class]) {
+        text-decoration: none;
+        color: var(--link-clr, var(--icon-fill, inherit));
     }
 
     button:not(.reset-btn) {
@@ -198,6 +208,11 @@ body {
 
     .relative {
         position: relative;
+    }
+
+    .link {
+        color: hsl(0, 0%, 43%);
+        font-weight: 500;
     }
 
     .no-shrink {
@@ -300,12 +315,6 @@ body {
         }
     }
 
-    a {
-        --outline-style: dashed;
-        text-transform: uppercase;
-        font-weight: 700;
-    }
-
     :is(i, legend) {
         color: var(--idiomatic-clr, var(--system-color-orange));
         letter-spacing: var(--idomatic-spacing, inherit);
@@ -378,7 +387,6 @@ body {
         --link-clr: hsl(0, 0%, 43%);
         padding: 2.5em 1.5em 1.5em;
         background-color: var(--system-color-white);
-        inline-size: var(--size, 100%);
         border-radius: 0 0 .5rem .5rem;
 
         & a::before {
@@ -390,35 +398,37 @@ body {
 
     }
 
-    :where([data-menu-opened] .categories, [role="dialog"]) {
+    :where(.menu, [role="dialog"]) {
         position: fixed;
         transform: var(--translation, translateX(-50vmax));
         opacity: 0;
+        inline-size: var(--modal-size, auto);
         visibility: hidden;
     }
 
     [role="dialog"] {
         --outline-clr: var(--system-color-dark);
-        inline-size: var(--modal-size, auto);
         inset-block-start: var(--y, auto);
         inset-inline-end: var(--right-x, auto);
     }
 
-    [data-menu-opened="true"] .categories {
+    [data-menu-opened="true"] .menu {
         --translation: none;
-        --size: 100vi;
+        --modal-size: 100vi;
         opacity: 1;
         z-index: 2;
-        inset: 3.2rem 0 auto;
+        inset: 4.7rem 0 auto;
         visibility: visible;
-
+        clip-path: inset(0 round 0 0 .5rem .5rem);
+        max-block-size: 80lvb;
+        overflow-y: auto;
     }
 
     :is([data-cart-active="true"], [data-menu-opened="true"]) nav::before {
         content: "";
         position: fixed;
         inset: 3.5rem 0 0;
-        background-color: hsla(0, 0%, 0%, 0.4);
+        background-color: hsla(0, 0%, 0%, 0.65);
         z-index: 1;
     }
 
@@ -432,10 +442,13 @@ body {
         --c-space: 1rem;
     }
 
-    .m-backdrop:not([data-cart-active] *) {
-        display: none;
+    .m-backdrop:not([data-cart-active] *),
+    .menu:not([data-menu-opened="true"] *) {
+        clip-path: inset(50%);
     }
-    .m-backdrop:where([data-cart-active="true"] *) {
+
+    .m-backdrop:where([data-cart-active="true"] *),
+    .menu-backdrop:where([data-menu-opened="true"] *) {
         position: fixed;
         inset: 0;
         display: block;
@@ -480,7 +493,7 @@ body {
             content: attr(data-items);
             display: inline-grid;
             place-items: center;
-            color: var(--system-color-pale);
+            color: var(--system-color-white);
             background-color: var(--system-color-orange);
             border-radius: 50%;
             position: absolute;
@@ -493,11 +506,11 @@ body {
         }
     }
 
-    :where(.categories > article, .branding) {
+    :where(.categories > li, .branding) {
         container: section / inline-size;
     }
 
-    .categories>article {
+    .categories>li {
         --color-fill: hsl(0, 0%, 94%);
         --radius: .5rem;
         display: flex;
@@ -558,10 +571,7 @@ body {
 
     }
 
-    [data-payment="mobile"]:not([data-mobile-selected] *) {
-        display: none;
-    }
-
+    [data-payment="mobile"]:not([data-mobile-selected] *),
     [data-payment="cash"]:not([data-cash-selected] *) {
         display: none;
     }
@@ -569,6 +579,10 @@ body {
     @media screen and (min-width: 480px) {
         .pm-grid {
             --g-template: "area1 area1" "area2 area3";
+        }
+
+        .menu>.categories {
+            padding: 4.5rem 1.5rem;
         }
 
         .categories {
@@ -626,7 +640,7 @@ body {
         --icon-fill: var(--system-color-orange);
     }
 
-    [data-outline-color ="dark"] {
+    [data-outline-color="dark"] {
         --outline-clr: var(--system-color-dark);
     }
 
@@ -776,6 +790,7 @@ body {
         inset-block-start: 0;
         z-index: 1;
         isolation: isolate;
+        max-block-size: 4.7rem;
 
         &::after {
             content: "";
@@ -837,7 +852,7 @@ body {
         transition: all 0.35s ease-out;
     }
 
-    :is(.categories, .cart-modal, dialog) {
+    :is(.menu, .cart-modal, dialog) {
         transition: opacity 0.1s ease-out, transform 0.35s 0.1s cubic-bezier(.25, .1, .3, 1.5);
     }
 
